# python-mix

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
birthday-paradox/: main.py
euler/: main.py
ezpps_scraper/: README.md  pyproject.toml  scraper.py
prime-finder/: main.py
tree/: main.py
